# Search_Engine_project

./: .gitignore  CMakeLists.txt  README.md  answers.json  request.json
include/: ConverterJSON.h  Entry.h  InvertedIndex.h  InverterIndex.h  RelativeIndex.h  SearchServer.h
nlohmann_json/: CMakeLists.txt
nlohmann_json/docs/mkdocs/docs/integration/: cmake.md  package_managers.md
nlohmann_json/tests/src/: unit-conversions.cpp
resources/: file001.txt  file002.txt  file003.txt  file004.txt
src/: CMakeLists.txt  ConverterJSON.cpp  Entry.cpp  InvertedIndex.cpp  RelativeIndex.cpp  SearchServer.cpp  converter_json.cpp  engine.cpp  inverted_index.cpp  inverter_index.cpp  search_server.cpp
tests/: CMakeLists.txt  test_inverted_index.cpp  test_search_server.cpp
